Ingress/nginx-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    type: proxy
spec:
  selector:
    matchLabels:
        type: proxy
  template:
    metadata:
      name: nginx-pod
      labels:
        type: proxy
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
...
