Ingress/tomcat-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    type: webserver
spec:
  selector:
    matchLabels:
      type: webserver
  template:
    metadata:
      name: tomcat-pod
      labels:
        type: webserver
    spec:
      containers:
        - name: tomcat
          image: tomee
          ports:
            - containerPort: 8080
...
