Ingress/httpd-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  labels:
    type: server
spec:
  type: clusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    type: server
...
