Ingress/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    type: proxy
spec:
  type: clusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    type: proxy
...
